--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -10,4 +10,5 @@ dependencies {
     implementation 'com.acmerobotics.roadrunner:core:0.5.3'
     implementation 'com.acmerobotics.dashboard:dashboard:0.3.10'
     implementation 'com.arcrobotics.ftclib:vision:1.1.0'
+    implementation 'com.noahbres.jotai:jotai:1.0.2'
 }
