--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,14 +13,22 @@
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+apply plugin: 'kotlin-android'
 
 repositories {
     maven { url = "https://dl.bintray.com/first-tech-challenge/ftcsdk/" }
     maven { url "https://maven.0x778.tk" }
+    mavenCentral()
 }
 
 dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'org.openftc:easyopencv:1.4.4'
     implementation 'com.spartronics4915.lib:ftc265:2.1.8'
+    implementation "androidx.core:core-ktx:+"
+    implementation 'com.arcrobotics.ftclib:vision:1.1.0' // vision
+    implementation 'com.arcrobotics:ftclib:1.1.6' // core
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
