--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,15 @@ configurations {
 }
 
 buildscript {
+    ext.kotlin_version = '1.5.0-M1'
     repositories {
         mavenCentral()
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
